--- a/index.html
+++ b/index.html
@@ -18,8 +18,7 @@
                 <p id="playerTotal"></p>
                 <p id="computerTotal"></p>
                 <h3 id="winner"></h3>
-                <p id="playerScore">Player Score: </p>
-                <p id="computerScore">Computer Score: </p>
+                <p id="playerScore"></p>
             </div>
         </main>
         <footer></footer>
