--- a/index.html
+++ b/index.html
@@ -3,25 +3,35 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content-"width-device-width">
-        <title>Dice</title>
+        <title>Donut Clicker</title>
         <link href = "style.css" rel="stylesheet" type="text/css" />
     </head>
     <body>
-        <header>
-            <h2>Dice Game</h2>
-        </header>
-        <main>
-        <button id ="rollButton">Roll Dice</button>
-            <div id="rolls">
-                <p id="playerDice">Player rolls</p>
-                <p id="computerDice">Computer rolls</p>
-                <p id="playerTotal"></p>
-                <p id="computerTotal"></p>
-                <h3 id="winner"></h3>
-                <p id="playerScore"></p>
+    <section>
+    <div class="main">
+        <div class="left">
+            <h3>Donut: <span class="donut-cost">0</span></h3>
+            <img src="https://s3.amazonaws.com/pix.iemoji.com/images/emoji/apple/ios-12/256/doughnut.png" alt ="" srcset="" class="donut-image">
+        </div>
+        <div class="right">
+          <div class="upgrade">
+            <div class="left-section">
+                <img src="" alt="" class="upload-img">
             </div>
-        </main>
-        <footer></footer>
-        <script src="script.js"></script>
-    </body>
+            <div class="mid-section">
+                <h4>Clicker</h4>
+                <div>
+                    <p>Cost: 10</p>
+                </div>
+            </div>
+            <div class="right-section">
+                
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+<script src="script.js"></script>
+</body>
 </html>
