--- a/index.html
+++ b/index.html
@@ -11,23 +11,26 @@
     <div class="main">
         <div class="left">
             <h3>Donut: <span class="donut-cost">0</span></h3>
-            <img src="https://icons8.com/icon/97432/doughnut" alt ="" srcset="" class="donut-image">
+            <img src="https://img.icons8.com/?size=100&id=UKhnG45ZZMK0&format=png&color=000000" alt ="" srcset="" class="donut-image" onclick="incrementDonut()" draggable="false">
         </div>
         <div class="right">
-          <div class="upgrade">
+          <div class="upgrade" onclick="buyClicker()">
             <div class="left-section">
-                <img src="https://img.icons8.com/?size=256&id=14315&format=png" alt="" class="upload-img">
+                <img src="https://img.icons8.com/?size=100&id=UKhnG45ZZMK0&format=png&color=000000" alt="" class="upload-img">
             </div>
             <div class="mid-section">
                 <h4>Clicker</h4>
-                <div>
+                <div class="cost-info">
                     <p>Cost: <span class="clicker-cost">10</span></p>
-                    <img src="https://s3.amazonaws.com/pix.iemoji.com/images/emoji/apple/ios-12/256/doughnut.png" alt="" srcset="" class="donut-img"
+                    <img src="https://img.icons8.com/?size=100&id=UKhnG45ZZMK0&format=png&color=000000" alt="" class="donut-img">
                 </div>
             </div>
-            <div class="right-section">
-                Level 0
-            </div>
+            <div class="right-section">Level 0</div>
+
+            <div class="next-level-info"></div>
+                <p>
+                    +<span class="cursor-increase">1</span> gems <br /> per second
+                </p>
           </div>
         </div>
       </div>
