--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <div class="right">
           <div class="upgrade" onclick="buyClicker()">
             <div class="left-section">
-                <img src="https://img.icons8.com/?size=100&id=UKhnG45ZZMK0&format=png&color=000000" alt="" class="upload-img">
+                <img src="https://img.icons8.com/?size=256&id=14315&format=png" alt="" class="upgrade-img">
             </div>
             <div class="mid-section">
                 <h4>Clicker</h4>
@@ -25,15 +25,16 @@
                     <img src="https://img.icons8.com/?size=100&id=UKhnG45ZZMK0&format=png&color=000000" alt="" class="donut-img">
                 </div>
             </div>
-            <div class="right-section">Level 0</div>
+            <div class="right-section">Level <span class="clicker-level">0</span></div>
 
             <div class="next-level-info"></div>
                 <p>
-                    +<span class="cursor-increase">1</span> gems <br /> per second
+                    +<span class="clicker-increase">1</span> donuts <br /> per second
                 </p>
           </div>
         </div>
       </div>
+    </div>
     </section>
 
 <script src="script.js"></script>
