--- a/index.html
+++ b/index.html
@@ -8,29 +8,25 @@
     </head>
     <body>
         <section>
-        <div class="main">
+           <div class="main">
             <div class="left">
                 <h3>Donut: <span class="donut-cost">0</span></h3>
                 <img src="https://img.icons8.com/?size=100&id=UKhnG45ZZMK0&format=png&color=000000" alt="" srcset="" class="donut-image" onclick="incrementDonut()" draggable="false">
-                </div>
-                <div class="right">
-                    <div class="upgrade" onclick="buyClicker()">
-                        <div class="left-section">
-                            <img src="https://img.icons8.com/?size=256&id=14315&format=png" alt="" class="upgrade-img">
-                        </div>
-                        <div class="mid-section">
-                            <h4>Clicker</h4>
-                        <div class="cost-info">
-                            <p>Cost: <span class="clicker-cost">10</span></p>
-                            <img src="https://img.icons8.com/?size=100&id=UKhnG45ZZMK0&format=png&color=000000" alt="" srcset="" class="donut-img">
-                        </div>
-                        </div>
-                        <div class="right-section">
-                            Level 0
-                        </div>
-                    </div>
-                </div>
             </div>
+            <div class="right">
+                <div class="upgrade">
+                    <div class="left-section">
+
+                    </div>
+                    <div class="mid-section">
+
+                    </div>
+                    <div class="right-section">
+
+                </div>
+               </div>
+             </div>
+           </div>
         </section>
 
         <script src="script.js"></script>
