--- a/index.html
+++ b/index.html
@@ -16,13 +16,17 @@
             <div class="right">
                 <div class="upgrade">
                     <div class="left-section">
-
+                        <img src="https://img.icons8.com/?size=256&id=14315&format=png" alt="" class="upgrade-img">
                     </div>
                     <div class="mid-section">
-
+                        <h4>Clicker</h4>
+                        <div class="cost-info">
+                            <p>Cost: <span class="cost-info">10</span></p>
+                            <img src="https://img.icons8.com/?size=100&id=UKhnG45ZZMK0&format=png&color=000000" alt="" srcset="" class="donut-img">
+                        </div>
                     </div>
                     <div class="right-section">
-
+                     Level 0
                 </div>
                </div>
              </div>
