--- a/index.html
+++ b/index.html
@@ -10,25 +10,59 @@
         <section>
            <div class="main">
             <div class="left">
-                <h3>Donut: <span class="donut-cost">0</span></h3>
+                <h3>Donut: <span class="donut-cost">500</span></h3>
                 <img src="https://img.icons8.com/?size=100&id=UKhnG45ZZMK0&format=png&color=000000" alt="" srcset="" class="donut-image" onclick="incrementDonut()" draggable="false">
             </div>
             <div class="right">
-                <div class="upgrade">
+
+                <div class="upgrade" onclick="buyClicker()">
                     <div class="left-section">
                         <img src="https://img.icons8.com/?size=256&id=14315&format=png" alt="" class="upgrade-img">
                     </div>
                     <div class="mid-section">
                         <h4>Clicker</h4>
                         <div class="cost-info">
-                            <p>Cost: <span class="cost-info">10</span></p>
+                            <p>Cost: <span class="clicker-cost">10</span></p>
                             <img src="https://img.icons8.com/?size=100&id=UKhnG45ZZMK0&format=png&color=000000" alt="" srcset="" class="donut-img">
                         </div>
                     </div>
-                    <div class="right-section">
-                     Level 0
-                </div>
+                    <div class="right-section">Level <span class="clicker-level">0</span></div>
+
+                    <div class="next-level-info">
+                        <p>
+                            +<span class="clicker-increase">1</span> donuts <br /> per second
+                        </p>
+                    </div>
                </div>
+
+               <div class="upgrade" onclick="buyClicker()">
+                <div class="left-section">
+                    <img src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAADAAAAAwCAYAAABXAvmHAAAACXBIWXMAAAsTAAALEwEAmpwYAAACc0lEQVR4nO2WTWsTQRjHHxVFpAc9KL149jN48OzFi5LkIOlBDwpFEyFtZppqJ0ZsaHf
+                    bmYUQ2TwTggcJLYj6AfwA9SSC4EGhF98OVhutyAYcmbabpm
+                    Gb9FDIDO4P5rKn33+flxmAmJiY/xvKsUmFXCFcfiECv1MhFeUyIEJ+ogL
+                    fUC6fUyHvE1G/zHjjJJgG1cL7PVwGVMiXVMhxVqmMgAkQgVcJx0eE41vK8e9+w
+                    2xVC+dzTvUMmMKUVz+tW4UKbHTaaXBV1vIcbzLGDrcdKAYutAIHnv2Zg3NDDcPY8
+                    jEqapeowMeE4/qgIPN8dvWHO6LaLmyewIU15cJZMAHd78STt6nAD/1DlNXnhdGdEA4sg0nc8
+                    P2jedef6FeRkvA6IQIH1sE0ksnkkVR2+tt4ie9ZiTlRVrqdAhcYmEgiU3idyBTUtcKsIhwjQ7iLpfeg1CEwkXQ291MHSGQKaow8UJOLtehqeHIMTEOvyqcz5zflE2GIfCmyEvp2p9XqKTBJPtwwvSGuT5ejLzyOM2Ca/F4hbj30okJ8ZY3G
+                    cePkw9O8d0Gls7mWHuzUnbv6Vt4wahb6ybe3blzWvWInF/xixLvphfHyIbpdKMePPcO8wXz/BJguH0K5JL1VyPPaRbBBXqNXJxX4q6eNKNggH0I5Lu1+dmMTbJHXTHG80jMHr8AW+XCYu1+thOMq2CIfQrl80r2JwCZ5Td6rp3baCH+DTfKaiUpjtCtAC2ySD6EC34UvU7BNXkME1rarsAK2yWuIwPT2PbAEtskfKLH8sGjHbTMk2vGfHyKBA8TKVTkohDXyUSG
+                    sk981zA4UOx9iYmJi4AD5B0JLZPLBy4IRAAAAAElFTkSuQmCC" alt="" class="upgrade-img">
+                </div>
+                <div class="mid-section">
+                    <h4>Clicker</h4>
+                    <div class="cost-info">
+                        <p>Cost: <span class="pickaxe-cost">130</span></p>
+                        <img src="https://img.icons8.com/?size=100&id=UKhnG45ZZMK0&format=png&color=000000" alt="" srcset="" class="donut-img">
+                    </div>
+                </div>
+                <div class="right-section">Level <span class="clicker-level">0</span></div>
+
+                <div class="next-level-info">
+                    <p>
+                        +<span class="clicker-increase">4</span> donuts <br /> per second
+                    </p>
+                </div>
+           </div>
+
              </div>
            </div>
         </section>
