--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <section>
             <div class="main">
                 <div class="left">
-                    <h3>Donut: <span class="donut-cost">5000</span></h3>
+                    <h3>Donut: <span class="donut-cost">0</span></h3>
                     <img src="https://img.icons8.com/?size=100&id=UKhnG45ZZMK0&format=png&color=000000" alt="" srcset="" class="donut-image" onclick="incrementDonut()" draggable="false">
                 </div>
                 <div class="right">
@@ -79,12 +79,22 @@
                         +<span class="miner-increase">24</span> donuts <br /> per second
                     </p>
                 </div>
-           </div>
+              </div>
     
     
                  </div>
                </div>
+
+               <div class="statistics">
+                <div class="texts">
+                 <p>GPC: <span id="gpc-text">1</span></p>
+                 <p>GPS: <span id="gpc-text">0</span></p>
+               </div>
+               </div>
+
+               <footer></footer>
             </section>
+
         <script src="script.js"></script>
     </body>
     </html>
