--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
     <body>
         <div class="main">
             <div class="left">
-                <h3>Donut: <span class="donut-cost">5000</span></h3>
-                <img src="https://img.icons8.com/?size=100&id=IGnJolYBXHhX&format=png&color=000000" alt="" srcset="" class="donut-image" onclick="incrementDonut()" draggable="false">
+                <h3>Burger: <span class="burger-cost">5000</span></h3>
+                <img src="https://img.icons8.com/?size=100&id=IGnJolYBXHhX&format=png&color=000000" alt="" srcset="" class="burger-image" onclick="incrementBurger()" draggable="false">
             </div>
             <div class="right">
 
@@ -23,7 +23,7 @@
                         <h4>Clicker</h4>
                         <div class="cost-info">
                             <p>Cost: <span class="clicker-cost">10</span></p>
-                            <img src="https://img.icons8.com/?size=100&id=IGnJolYBXHhX&format=png&color=000000" alt="" srcset="" class="donut-img">
+                            <img src="https://img.icons8.com/?size=100&id=IGnJolYBXHhX&format=png&color=000000" alt="" srcset="" class="burger-img">
                         </div>
                     </div>
                     <div class="right-section">Level <span class="clicker-level">0</span></div>
@@ -31,7 +31,7 @@
 
                     <div class="next-level-info">
                         <p>
-                            +<span class="clicker-increase">1</span> donuts <br /> per second
+                            +<span class="clicker-increase">1</span> burgers <br /> per second
                         </p>
                     </div>
                </div>
@@ -45,7 +45,7 @@
                     <h4>Pickaxe</h4>
                     <div class="cost-info">
                         <p>Cost: <span class="pickaxe-cost">130</span></p>
-                        <img src="https://img.icons8.com/?size=100&id=IGnJolYBXHhX&format=png&color=000000" alt="" srcset="" class="donut-img">
+                        <img src="https://img.icons8.com/?size=100&id=IGnJolYBXHhX&format=png&color=000000" alt="" srcset="" class="burger-img">
                     </div>
                 </div>
                 <div class="right-section">Level <span class="pickaxe-level">0</span></div>
@@ -67,7 +67,7 @@
                 <h4>Miner</h4>
                 <div class="cost-info">
                     <p>Cost: <span class="miner-cost">850</span></p>
-                    <img src="https://img.icons8.com/?size=100&id=IGnJolYBXHhX&format=png&color=000000" alt="" srcset="" class="donut-img">
+                    <img src="https://img.icons8.com/?size=100&id=IGnJolYBXHhX&format=png&color=000000" alt="" srcset="" class="burger-img">
                 </div>
             </div>
             <div class="right-section">Level <span class="miner-level">0</span></div>
@@ -75,7 +75,7 @@
 
             <div class="next-level-info">
                 <p>
-                    +<span class="miner-increase">24</span> donuts <br /> per second
+                    +<span class="miner-increase">24</span> burgers <br /> per second
                 </p>
             </div>
        </div>
